--- a/CBLExam219v2_.html
+++ b/CBLExam219v2_.html
@@ -88,11 +88,11 @@ display: none;
 </div> 			
 <div id=category219w2> 		2. John Henry, who is a licensed customs broker, presently has a permit in the port of Chicago.	
 <input type='radio' name='q219w2' value='H' id='q219w2'><label for=qZw2'H'>		He would like to obtain a national permit. John has identified to CBP the following information:	
-<div id=category219w1.> 		1. License number and date of issuance	
-<div id=category219w2.> 		2. Address and telephone number of the office designated as the office of record	
-<div id=category219w3.> 		3. Set forth the name, broker, license number, office address and telephone number of the	
+		1. License number and date of issuance	
+ 		2. Address and telephone number of the office designated as the office of record	
+		3. Set forth the name, broker, license number, office address and telephone number of the	
 		individual broker who will exercise responsible supervision and control	
-<input type='radio' name='q219w2' value='I' id='q219w2'><label for=qZw2'I'>		In order for John Henry to obtain his national permit, what other function would be required?	</p>
+		In order for John Henry to obtain his national permit, what other function would be required?	</p>
 <input type='radio' name='q219w2' value='A' id='q219w2'><label for=qZw2'A'>		A. Cancel his district permit	</label><br>
 <input type='radio' name='q219w2' value='B' id='q219w2'><label for=qZw2'B'>		B. Hire a licensed broker	</label><br>
 <input type='radio' name='q219w2' value='C' id='q219w2'><label for=qZw2'C'>		C. Attached a receipt of payment	</label><br>
@@ -221,9 +221,9 @@ display: none;
 </div> 			
 <div id=category219w12> 		12. Using the rules for constructing the manufacturers ID code, construct an identifying code for	
 		the following example:	
-<input type='radio' name='q219w12' value='A' id='q219w12'><label for=qZw12'A'>		Ace Metal Fabrication	
-<div id=category219w15> 		1579 Long Avenue	
-<input type='radio' name='q219w12' value='W' id='q219w12'><label for=qZw12'W'>		Whitehorse, Yukon Territory	
+		Ace Metal Fabrication	
+		1579 Long Avenue	
+		Whitehorse, Yukon Territory	
 <input type='radio' name='q219w12' value='C' id='q219w12'><label for=qZw12'C'>		Canada	</p>
 <input type='radio' name='q219w12' value='A' id='q219w12'><label for=qZw12'A'>		A. CAACEMET1579WHI	</label><br>
 <input type='radio' name='q219w12' value='B' id='q219w12'><label for=qZw12'B'>		B. CAACEMETFAB1WHI	</label><br>
@@ -418,7 +418,7 @@ display: none;
 		industry engaged in the manufacture, production, or wholesale in the United States of	
 		a domestic like product	</label><br>
 <input type='radio' name='q219w27' value='E' id='q219w27'><label for=qZw27'E'>		E. If the covered merchandise is a processed agricultural product, as defined in 19 U.S.C.	
-<div id=category219w16> 		1677(4) (E), a coalition or trade association that is representative of any of the	
+		1677(4) (E), a coalition or trade association that is representative of any of the	
 		following: processors; processors and producers; or processors and growers	</label><br>
 </ul>			
 <p id="demo27"></p>			
@@ -1059,8 +1059,8 @@ display: none;
 <p id="demo71"></p>			
 </div> 			
 <div id=category219w72> 		72. Which of the following is TRUE with respect to imported merchandise after the U.S.	
-<input type='radio' name='q219w72' value='I' id='q219w72'><label for=qZw72'I'>		International Trade Commission (ITC) finds a violation of section 337 of the Tariff Act (19 USC	
-<div id=category219w13> 		1337) and issues an exclusion order, as implemented by CBP under 19 CFR 12.39?	</p>
+	International Trade Commission (ITC) finds a violation of section 337 of the Tariff Act (19 USC	
+		1337) and issues an exclusion order, as implemented by CBP under 19 CFR 12.39?	</p>
 <input type='radio' name='q219w72' value='A' id='q219w72'><label for=qZw72'A'>		A. The exclusion order is not effective until 60 days after issuance, at which point merchandise	
 		subject to the exclusion order no longer may be entered.	</label><br>
 <input type='radio' name='q219w72' value='B' id='q219w72'><label for=qZw72'B'>		B. Merchandise subject to the exclusion order may be entered under a single entry bond, in	
@@ -1068,7 +1068,7 @@ display: none;
 <input type='radio' name='q219w72' value='C' id='q219w72'><label for=qZw72'C'>		C. Merchandise subject to the exclusion order may be entered under bond, in an amount set	
 		by the ITC that is secured by the importer’s basic importation bond.	</label><br>
 <input type='radio' name='q219w72' value='D' id='q219w72'><label for=qZw72'D'>		D. Merchandise subject to the exclusion order may be entered under bond as provided for in	
-<div id=category219w19> 		19 CFR 113, until the determination of a violation becomes final.	</label><br>
+		19 CFR 113, until the determination of a violation becomes final.	</label><br>
 <input type='radio' name='q219w72' value='E' id='q219w72'><label for=qZw72'E'>		E. Merchandise subject to the exclusion order may not be entered after the exclusion order	
 		has issued.	</label><br>
 </ul>			
@@ -1213,10 +1213,10 @@ display: none;
 
 <input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>			
 
-<div id=category219w82>		
+<div id=category219w83>		
 <input type="button" value="SUBMIT" onClick="check_approval()"/>	
 </div>
-<div id=category219w83>	
+<div id=category219w82>	
 <input type="button" value="SUBMIT" onClick="show2()"/>	
 </div>
 <div id="content"></div>
