--- a/nft.html
+++ b/nft.html
@@ -394,7 +394,7 @@ var my_nft =(async function(){
 const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
-const totalSupply = await contract_bal.methods.totalSupply().call();
+const totalSupply = await contract_bal.methods.baseURI().call();
 alert(totalSupply)
 })()
 //return val
