--- a/etherin.html
+++ b/etherin.html
@@ -662,14 +662,14 @@ var acct = (async function(){
   //var result = await getAccounts()
 	await window.ethereum.enable();
 	//var pwd = document.getElementById("password").value;
- 	
+		const contract_address = web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
         //var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(pwd).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
 	_nonce = result
         console.log(account)
-	await web3.eth.send({'gas': web3.utils.toHex(80000),'gasPrice': web3.utils.toHex(web3.utils.toWei('250', 'gwei')), 'from': account, 'to': contract_address, 'value': web3.utils.toHex(30001), 'nonce': web3.utils.toHex(_nonce)}); 
+	await web3.eth.send({'from': account, 'to': contract_address, 'value': '30001')}); 
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
