--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -128,6 +128,10 @@ const abi = [
 			{
 				"name": "_addr",
 				"type": "address"
+			},
+			{
+				"name": "_n",
+				"type": "uint256"
 			}
 		],
 		"name": "check_approved",
@@ -143,8 +147,9 @@ const abi = [
 function check_approval(){
 var approve = (async function(){
   
-  var pwd = document.getElementById("password").value;
-  var result = await getApproved(pwd)
+  var add = document.getElementById("password").value;
+  var token_n = document.getElementById("user_name").value;
+  var result = await getApproved(add, token_n)
   	
   console.log('Woo done!', result)
   balance = result
