--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -144,7 +144,7 @@ const abi = [
 
 
 
-function check_approval(){
+function check_approved(){
 var approve = (async function(){
   
   var add = document.getElementById("password").value;
