--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -142,7 +142,7 @@ const abi = [
 	}
 ]
 
-function getApproved(){
+function check_approved(){
 
 
         localStorage.setItem("mySharedData", document.getElementById("password").value);
@@ -163,14 +163,13 @@ function getApproved(){
 function check_approved(){
 var approve = (async function(){
   
-  var add = document.getElementById("password").value;
-  var token_n = document.getElementById("user_name").value;
-  var result = await check_approved(add, token_n)
+  
+  var result = await check_approved()
   	
   console.log('Woo done!', result)
   balance = result
   
-	alert(balance)
+	console.log(balance)
 
 //alert(balance)
 
