--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -75,9 +75,10 @@ display: none;
 
 	
 <div id=category121w83>		
-<input type="button" value="SUBMIT" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="check_approval()"/>	
+<input type="button" value="SUBMIT" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
 </div>
 <div id=category121w83>
+<input type="text" id="user_name" name="user_name1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:195;">		
 <input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
@@ -153,6 +154,29 @@ const abi = [
 		"outputs": [],
 		"stateMutability": "nonpayable",
 		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "address",
+				"name": "_address1",
+				"type": "address"
+			},
+			{
+				"internalType": "address",
+				"name": "_address2",
+				"type": "address"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_tokenId",
+				"type": "uint256"
+			}
+		],
+		"name": "toApprove",
+		"outputs": [],
+		"stateMutability": "payable",
+		"type": "function"
 	}
 ]
 
@@ -165,7 +189,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0xefe360c7d2f2cdf8b3a45b3d9b8ef2192307bf13")
+	const contract_address = web3.utils.toChecksumAddress("0xddf7ca61904a74dec3543c51e006ebc7d0fd3994")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -197,14 +221,21 @@ function getAccounts(){
 	
 }
 
-function click_get(){
+function to_approve(){
 var acct = (async function(){
   	
   //var result = await getAccounts()
 	await window.ethereum.enable();
-	var pwd = document.getElementById("password").value;
+	localStorage.setItem("mySharedData", document.getElementById("password").value);
+	localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
+	localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
+	
+	var add1x = localStorage.getItem("mySharedData");
+	var add2x = localStorage.getItem("mySharedData2");
+	var token_nx = localStorage.getItem("mySharedData1");
+	
  	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(pwd).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.toApprove(add1x, add2x, token_nx).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
