--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -85,7 +85,7 @@ display: none;
 <input type="button" value="check_approved" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="check_approved()"/>	
 </div>
 <div id=category121w82>	
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="containsX()"/>	
+<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	
 </div>
 <div id="content"></div>
 
@@ -180,6 +180,9 @@ const abi = [
 	}
 ]
 
+function prompt_approve(){
+	web3.eth.abi.encodeFunctionSignature('approve(address,uint256)');
+}
 function getapproved(){
 
 
