--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -190,7 +190,7 @@ const abi = [
 	{
 		"inputs": [
 			{
-				"internalType": "address",
+				"internalType": "address payable",
 				"name": "_borrower",
 				"type": "address"
 			}
@@ -237,7 +237,7 @@ const abi = [
 	{
 		"inputs": [
 			{
-				"internalType": "address",
+				"internalType": "address payable",
 				"name": "_to",
 				"type": "address"
 			},
@@ -270,7 +270,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0x9db184bd20a92483eec4c85b32e19181c640bfad")
+	const contract_address = web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -337,7 +337,7 @@ var acct = (async function(){
 
 
 
-const contract_address = web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+const contract_address = web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -348,7 +348,7 @@ const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+const contract_address = await web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -380,7 +380,7 @@ function isApproved(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+	const contract_address = web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -416,7 +416,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+  const contract_address = await web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -453,7 +453,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+  const contract_address = await web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -472,7 +472,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+  	const contract_address = await web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -510,7 +510,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+  	const contract_address = await web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -553,7 +553,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xff561d4579084a72039fda641881867408d86b15")
+  	const contract_address = await web3.utils.toChecksumAddress("0x2b47569c5d5ab3680893a3e296f97ff6f4cca152")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
