--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -349,7 +349,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	//const contract_address1 = web3.utils.toChecksumAddress("0x19545d326fa247c495dcdbb99f88e0faebb956e5")
-        var _data = new web3.eth.Contract(abi, contract_address).ReturnToBorrower(add2x).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.ReturnToBorrower(add2x).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
