--- a/nft_create_debt.html
+++ b/nft_create_debt.html
@@ -531,7 +531,7 @@ function loan_amount(){
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	const bal = contract_bal.methods.loan_amount_list(pwdx).call();
+	const bal = contract_bal.methods.token_contracts_list(pwdx).call();
 	
 	return bal
 	}
